--- a/www/homepage.html
+++ b/www/homepage.html
@@ -5,7 +5,14 @@
 </head>
 
 <body>
-    <h1>Hello world</h1>
+    <h1>this is a hello world</h1>
+
+    <form action="/" method="POST">
+        <input type="text" name="test">
+
+        <input type="submit">
+    </form>
+
 </body>
 
 
