--- a/www/homepage.html
+++ b/www/homepage.html
@@ -9,7 +9,7 @@
     <h1>this is a hello world</h1>
 
     <form action="/" method="POST">
-        <input type="text" name="test">
+        <input type="text" name="testas">
 
         <input type="submit">
     </form>
